# ProtoAI

./: .gitignore  package.json
app/: .gitignore  index.html  main.js  mockData.ts  package.json  renderer.js  tsconfig.json  vite.config.ts
app/electron/: main.ts  preload.ts
app/lib/: serial.ts  types.ts
app/lib/util/: debug.ts  index.ts  iter.ts  string.ts
app/src/: App.vue  GPT.ts  data-handling.ts  index.css  index.ts  store.ts  summary.json
app/src/components/: DataEntry.vue  DataOverview.vue  FieldDropdown.vue  FootBar.vue  HistoryView.vue  MenuBar.vue  PayloadTable.vue  PayloadTables.vue  TableDropdown.vue  UserDialog.vue
app/src/helpers/: createPlaceholderData.ts
app/src/layout/: HorizontalDivision.vue
app/src/models/: BinaryParser.ts
core/: CMakeLists.txt  Makefile  addon.cpp  compile_commands.json  index.cjs  index.d.ts  index.mjs  package.json
core/include/: CoreObject.h  Dispatcher.h  Stream.h  shared.h
core/include/utils/: deleter.h  map-set.h  napi-helper.h  pointer.h  stacktrace.h  type-name.h
core/lib/threading/: FIFO.h  exception.h
core/scripts/: FindNodeAddonApi.cmake  FindNodeApiHeaders.cmake  make.cjs
core/src/: Dispatcher.cpp  ExampleObject.cpp  Initializer.cpp
data/: GPT_infer.js  GPT_output.txt  README  data.ts  dataHandling.js  processed_data.json  prompt.txt
firmware/: .gitignore  CMakeLists.txt  platformio.ini
firmware/components/esp_tinyusb/: descriptors_control.c  idf_component.yml
firmware/include/: pinout.h
firmware/src/: CMakeLists.txt  main.cpp  usb.cpp
inference/: GPT_infer.js  GPT_output.txt  dataHandling.js  prompt.txt
